# Firmware

./: Cargo.toml  README.md  controller.py  display.py  leg.urdf  main.py  pyproject.toml  requirements_dev.txt  sensors.py  server.py  speech.py  speech1.py  speech2.py  vision.py
src/: lib.rs
