[build-system]
requires = ["maturin>=1.7.0,<1.8.0"]
build-backend = "maturin"

[project]
name = "Firmware"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
module-name = "rutils"
features = ["pyo3/extension-module"]
